# extreme-bevy

./: Cargo.toml  bevy_game-308398faf90dcbf8.js  bevy_game-5dce3a07a4c074e5.js  bevy_game-d6c183c5963aeb94.js  bevy_game-f4413eb597a15bd8.js  bevy_game-f4fb0cf9f4b1ea3a.js  index.html
.cargo/: config.toml
.github/workflows/: ci.yml
src/: actions.rs  dev.rs  lib.rs  main.rs  networking.rs  player.rs
src/networking/: native.rs  protocol.rs  shared.rs  wasm.rs
src/networking/targets/: native.rs  shared.rs  wasm.rs
